--- a/app/src/main/res/layout/alarm_setting_layout.xml
+++ b/app/src/main/res/layout/alarm_setting_layout.xml
@@ -8,12 +8,11 @@
 
     <Button
         android:id="@+id/return_button2"
-        arginStart="36dp"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:layout_marginStart="36dp"
         android:layout_marginBottom="36dp"
-        android:text="BACK"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints,MissingPrefix" />
@@ -24,7 +23,7 @@
         android:layout_height="80dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="36dp"
-        android:text="保存"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
