--- a/app/src/main/res/layout/alarm_list_layout.xml
+++ b/app/src/main/res/layout/alarm_list_layout.xml
@@ -17,7 +17,8 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addAlarmButton"
@@ -33,14 +34,20 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/alarm_list"
-        android:layout_width="409dp"
-        android:layout_height="629dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleX="1"
 
+        android:paddingBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/alarm_item_layout" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/alarm_item_layout"
+        android:clipToPadding="false"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
