--- a/app/src/main/res/layout/alarm_item_layout.xml
+++ b/app/src/main/res/layout/alarm_item_layout.xml
@@ -8,6 +8,7 @@
     android:layout_marginBottom="5dp">
 
     <LinearLayout
+        android:id="@+id/item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
